# branch_builder

./: .gitignore  CLAUDE.md  Dockerfile  README.md  TODO.md  bb.sh  build_image.sh  env  labels.template  pyproject.toml  setup_worktree.sh
branches/XRPLF/release-3.1/: Dockerfile
branches/XRPLF/rippled/ripple/smart-escrow/wamr/: conandata.yml  conanfile.py
branches/tequdev/sponsor/: fix-case-sensitivity.patch
builder/: __init__.py  __main__.py  worktree.py
docs/superpowers/specs/: 2026-05-13-build-image-help-flag-design.md
tests/: test_build.py  test_config.py  test_setup_worktree.sh  test_worktree.py
tui/: __main__.py  app.py  github.py
tui/screens/: build.py  options.py  select.py
